src/test/error/Sub5.lns
pub enum Sub5enum {
   val1,
   val2,
}
